<resources>
    <string name="app_name">Wish You Were Here</string>
    <string name="main_heading">Places I recommend</string>
    <string name="recent_only_checkbox">Show only places visited in the last year</string>
    <string name="sort_name">Sort by name (ASC)</string>
    <string name="sort_rating">Sort by rating (high to low)</string>
    <string name="last_visit_format">Last visit: %1$s</string>
    <string name="location_image_content_description">Location image</string>
    <string name="placeholder_location">Location name</string>
    <string name="placeholder_place">City, State, Country</string>
    <string name="placeholder_date">Last visit: yyyy-mm-dd</string>
    <string name="region_all">All regions</string>
    <string name="empty_state_message">No places match your current filters. Try changing your selection.</string>
    <string name="detail_back">Back</string>
    <string name="field_name_label">Location name</string>
    <string name="field_place_label">City, state, country</string>
    <string name="field_date_label">Last visit date (yyyy-mm-dd)</string>
    <string name="error_fix_fields">Please fix the highlighted fields.</string>
    <string name="error_name_required">Enter a location name.</string>
    <string name="error_place_required">Enter city, state, country.</string>
    <string name="error_date_format">Use date format yyyy-mm-dd.</string>
    <string name="error_date_future">Date cannot be in the future.</string>
    <string name="error_rating_range">Rating must be between 0 and 5.</string>
    <string name="location_updated_toast">Updated: %1$s</string>

    <string-array name="region_options">
        <item>All regions</item>
        <item>Victoria</item>
        <item>New South Wales</item>
        <item>Queensland</item>
        <item>Northern Territory</item>
    </string-array>
</resources>